feat: "Adicionando estrutura do header(menu)"

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Bruno Pinheiro</title>
-
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-
+<header>
+    <img src="assets/img/logo.png" alt="Logo/sigla de Bruno Pinheiro">
+    <nav>
+        <a href="#sobre" lang="en">Sobre</a>
+        <a href="#skill">Skill</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#contatos">Contatos</a>
+        <a href="" lang="en">Download CV</a>
+    </nav>
+</header>
 
     
 </body>
