--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Bruno Pinheiro</title><link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Portfolio - Bruno Pinheiro</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
@@ -17,7 +18,7 @@
         <a href="#skill">Skill</a>
         <a href="#projetos">Projetos</a>
         <a href="#contatos">Contatos</a>
-        <a href="" lang="en">Download CV</a>
+        <a class="button" href="" lang="en">Download CV</a>
     </nav>
 </header>
 
