--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/title.css">
+
 </head>
 <body>
 <header>
@@ -22,6 +24,7 @@
     </nav>
 </header>
 
+<h1 class="title">Bruno Pinheiro</h1>
     
 </body>
 </html>
