--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/subtitle.css">
 
 </head>
 <body>
-<header>
-    <h1>BP</h1>
-    <nav>
-        <a href="#sobre" lang="en">Sobre</a>
-        <a href="#skill">Skill</a>
-        <a href="#projetos">Projetos</a>
-        <a href="#contatos">Contatos</a>
-        <a class="button" href="" lang="en">Download CV</a>
-    </nav>
-</header>
+    <header>
+        <h1>BP</h1>
+        <nav>
+            <a href="#sobre" lang="en">Sobre</a>
+            <a href="#skill">Skill</a>
+            <a href="#projetos">Projetos</a>
+            <a href="#contatos">Contatos</a>
+            <a class="button" href="" lang="en">Download CV</a>
+        </nav>
+    </header>
 
-<h1 class="title">Bruno Pinheiro</h1>
-    
+    <h1 class="title">Bruno Pinheiro</h1>
+
+    <h2> FrontEnd Developer</h2>
 </body>
 </html>
