--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/box.css">
 
 </head>
 <body>
@@ -25,8 +26,10 @@
         </nav>
     </header>
 
-    <h1 class="title">Bruno Pinheiro</h1>
+    <div id="box">
+        <h1 class="title">Bruno Pinheiro</h1>
 
-    <h2> FrontEnd Developer</h2>
+        <h2>FrontEnd Developer</h2>
+    </div>
 </body>
 </html>
