--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
+    <link rel="stylesheet" href="css/components/button.css">
 
 </head>
 <body>
@@ -25,11 +26,13 @@
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-
+    
     <div id="box">
         <h1 class="title">Bruno Pinheiro</h1>
-
+        
         <h2>FrontEnd Developer</h2>
     </div>
+    <a class="button" href="" lang="en">Download CV</a>
+    <a class="button" href="">Contatos</a>
 </body>
 </html>
