feat: "Create action and header component"

--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/action.css">
 
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>BP</h1>
         <nav>
-            <a href="#sobre" lang="en">Sobre</a>
-            <a href="#skill">Skill</a>
-            <a href="#projetos">Projetos</a>
-            <a href="#contatos">Contatos</a>
+            <a class="action" href="#sobre" lang="en">Sobre</a>
+            <a class="action" href="#skill">Skill</a>
+            <a class="action" href="#projetos">Projetos</a>
+            <a class="action" href="#contatos">Contatos</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     
-    <div id="box">
+    <div class="box">
         <h1 class="title">Bruno Pinheiro</h1>
         
-        <h2>FrontEnd Developer</h2>
+        <h2 class="subtitle">FrontEnd Developer</h2>
     </div>
     <a class="button" href="" lang="en">Download CV</a>
     <a class="button" href="">Contatos</a>
