--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/header.css">
     <link rel="stylesheet" href="css/components/banner.css">
-    <link rel="stylesheet" href="css/components/title.css">
+    <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
     <link rel="stylesheet" href="css/components/action.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/section.css">
-
+    <link rel="stylesheet" href="css/components/tec-skill.css">
+    <link rel="stylesheet" href="css/components/progress-bar.css">
+    
 </head>
 <body>
     <header class="header">
@@ -32,7 +34,7 @@
     <section class="banner">
         <div class="wrapper">
             <div class="box">
-                <h1 class="title">Bruno Pinheiro</h1>
+                <h1 class="main-title">Bruno Pinheiro</h1>
                 
                 <h2 class="subtitle">FrontEnd Developer</h2>
             </div>
@@ -43,7 +45,14 @@
         </div>
     </section>
     <section class="section">
-        <h2 class="title -second">Skills</h2>
+        <h2 class="main-title -second">Skills</h2>
+        <article class="tec-skill">
+            <img class="icon" src="img/iconHtml.svg" alt="Logo do HTML5 em svg">
+            <div class="description-skill">
+                <h3 class="title">HTML</h3>
+                <progress class="progress-bar" max="100" value="100">100%</progress>
+            </div>
+        </article>
     </section>
 </body>
 </html>
