--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/tec-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
+    <link rel="stylesheet" href="css/components/wrapper-skill.css">
     
 </head>
 <body>
@@ -46,13 +47,64 @@
     </section>
     <section class="section">
         <h2 class="main-title -second">Skills</h2>
-        <article class="tec-skill">
-            <img class="icon" src="img/iconHtml.svg" alt="Logo do HTML5 em svg">
-            <div class="description-skill">
-                <h3 class="title">HTML</h3>
-                <progress class="progress-bar" max="100" value="100">100%</progress>
-            </div>
-        </article>
+        <div class="wrapper-skill">
+            <article class="tec-skill">
+                <img class="icon" src="img/iconHtml.svg" alt="Logo do HTML5 em svg">
+                <div class="description-skill">
+                    <h3 class="title">HTML</h3>
+                    <progress class="progress-bar" max="100" value="100">100%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/iconCss.svg" alt="Logo do CSS3 em svg">
+                <div class="description-skill">
+                    <h3 class="title">CSS</h3>
+                    <progress class="progress-bar" max="100" value="100">100%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/iconJS.svg" alt="Logo do JavaScript em svg">
+                <div class="description-skill">
+                    <h3 class="title">JavaScript</h3>
+                    <progress class="progress-bar" max="100" value="100">100%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/icoAngular.svg" alt="Logo do Angular em svg">
+                <div class="description-skill">
+                    <h3 class="title">Angular</h3>
+                    <progress class="progress-bar" max="100" value="80">80%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/iconTypescript.svg" alt="Logo do Typescript em svg">
+                <div class="description-skill">
+                    <h3 class="title">Typescript</h3>
+                    <progress class="progress-bar" max="100" value="80">80%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/iconReact.svg" alt="Logo do React em svg">
+                <div class="description-skill">
+                    <h3 class="title">React</h3>
+                    <progress class="progress-bar" max="100" value="75">75%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/iconMysql.svg" alt="Logo do MySql em svg">
+                <div class="description-skill">
+                    <h3 class="title">MySql</h3>
+                    <progress class="progress-bar" max="100" value="90">90%</progress>
+                </div>
+            </article>
+            <article class="tec-skill">
+                <img class="icon" src="img/iconGit.svg" alt="Logo do Git em svg">
+                <div class="description-skill">
+                    <h3 class="title">Git e GitHub</h3>
+                    <progress class="progress-bar" max="100" value="95">95%</progress>
+                </div>
+            </article>
+        </div>
     </section>
 </body>
 </html>
