--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/components/tec-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
+    <link rel="stylesheet" href="css/components/card-project.css">
     
 </head>
 <body>
@@ -105,6 +106,44 @@
                 </div>
             </article>
         </div>
+    </section>
+    <section class="section">
+        <figure class="card-project">
+            <img class="logo" src="img/angularTaskList.png" alt="'TaskList' project in Angular17">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/angularControlDamagedProducts.png" alt="'Control Damaged Products' project in Angular17">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/angularBlogSaude.png" alt="'Blog Welfare' project in angular17">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/angularBuzzFeed.png" alt="'Buzz Feed' project in angular">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/jsEstampariaOnline.png" alt="'Virtual print store' Project in JavaScript, html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/jsStarWar.png" alt="'Game star wars' Project in JavaScript, html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/jsDetonaRalph.png" alt="'Game Arcade Detona Ralph' project in JavaScript, html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/jsJogoDaMemoria.png" alt="'Memory game' project in JavaScript,html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/jsJoKenPo.png" alt="'YuGiOh-themed JokenPo' project in JavaScript, html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/jsSimulatorVirtualPiano.png" alt="'Piano simulator' project in JavaScript, html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/htmlCss_CurriculoWeb.png" alt="'Web curriculum' project in html and css">
+        </figure>
+        <figure class="card-project">
+            <img class="logo" src="img/htmlCss_LandingPageTrilhaCss.png" alt="'Landing page Trilha Css' project in html and css">
+        </figure>
     </section>
 </body>
 </html>
