feat: "Add variations in section component"

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
             </article>
         </div>
     </section>
-    <section class="section">
+    <section class="section -bgBlack -bdFirst">
+        <h2 class="main-title -second">Projetos</h2>
         <figure class="card-project">
             <img class="logo" src="img/angularTaskList.png" alt="'TaskList' project in Angular17">
         </figure>
