--- a/index.html
+++ b/index.html
@@ -111,42 +111,66 @@
     <section class="section -bgBlack -bdFirst">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
-            <figure class="card-project">
-                <img class="logo" src="img/angularTaskList.png" alt="'TaskList' project in Angular17">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/angularControlDamagedProducts.png" alt="'Control Damaged Products' project in Angular17">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/angularBlogSaude.png" alt="'Blog Welfare' project in angular17">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/angularBuzzFeed.png" alt="'Buzz Feed' project in angular">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/jsEstampariaOnline.png" alt="'Virtual print store' Project in JavaScript, html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/jsStarWar.png" alt="'Game star wars' Project in JavaScript, html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/jsDetonaRalph.png" alt="'Game Arcade Detona Ralph' project in JavaScript, html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/jsJogoDaMemoria.png" alt="'Memory game' project in JavaScript,html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/jsJoKenPo.png" alt="'YuGiOh-themed JokenPo' project in JavaScript, html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/jsSimulatorVirtualPiano.png" alt="'Piano simulator' project in JavaScript, html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/htmlCss_CurriculoWeb.png" alt="'Web curriculum' project in html and css">
-            </figure>
-            <figure class="card-project">
-                <img class="logo" src="img/htmlCss_LandingPageTrilhaCss.png" alt="'Landing page Trilha Css' project in html and css">
-            </figure>
+            <a href="https://github.com/brunop27/Angular_taskList" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/angularTaskList.png" alt="'TaskList' project in Angular17">
+                </figure>
+            </a>
+            <a href="https://github.com/brunop27/Angular_DamageControlProducts" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/angularControlDamagedProducts.png" alt="'Control Damaged Products' project in Angular17">
+                </figure>
+            </a>
+            <a href="https://github.com/brunop27/Angular_BlogSaude" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/angularBlogSaude.png" alt="'Blog Welfare' project in angular17">
+                </figure>
+            </a>
+            <a href="https://github.com/brunop27/Angular_BuzzyFeed" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/angularBuzzFeed.png" alt="'Buzz Feed' project in angular">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Estamparia_deSkate/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/jsEstampariaOnline.png" alt="'Virtual print store' Project in JavaScript, html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Jogo_StarWars/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/jsStarWar.png" alt="'Game star wars' Project in JavaScript, html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Jogo_Detona_Ralph/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/jsDetonaRalph.png" alt="'Game Arcade Detona Ralph' project in JavaScript, html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Jogo_daMemoria/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/jsJogoDaMemoria.png" alt="'Memory game' project in JavaScript,html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Jogo_YuGiOh/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/jsJoKenPo.png" alt="'YuGiOh-themed JokenPo' project in JavaScript, html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Simulador_Piano/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/jsSimulatorVirtualPiano.png" alt="'Piano simulator' project in JavaScript, html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/CurriculoWeb/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/htmlCss_CurriculoWeb.png" alt="'Web curriculum' project in html and css">
+                </figure>
+            </a>
+            <a href="https://brunop27.github.io/Landing_page_TrilhaCSS/" target="_blank">
+                <figure class="card-project">
+                    <img class="logo" src="img/htmlCss_LandingPageTrilhaCss.png" alt="'Landing page Trilha Css' project in html and css">
+                </figure>
+            </a>
         </div>
         
     </section>
