--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
-    <link rel="stylesheet" href="css/components/action.css">
+    <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/button.css">
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/tec-skill.css">
@@ -27,10 +27,10 @@
     <header class="header">
         <h1>BP</h1>
         <nav>
-            <a class="action" href="#sobre" lang="en">Sobre</a>
-            <a class="action" href="#skill">Skill</a>
-            <a class="action" href="#projetos">Projetos</a>
-            <a class="action" href="#contatos">Contatos</a>
+            <a class="main-action" href="#sobre" lang="en">Sobre</a>
+            <a class="main-action" href="#skill">Skill</a>
+            <a class="main-action" href="#projetos">Projetos</a>
+            <a class="main-action" href="#contatos">Contatos</a>
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
