--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/components/header.css">
-    <link rel="stylesheet" href="css/components/banner.css">
+    <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/box.css">
@@ -34,7 +34,7 @@
             <a class="button" href="" lang="en">Download CV</a>
         </nav>
     </header>
-    <section class="banner">
+    <section class="main-banner">
         <div class="wrapper">
             <div class="box">
                 <h1 class="main-title">Bruno Pinheiro</h1>
