--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/components/subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-action.css">
-    <link rel="stylesheet" href="css/components/button.css">
+    <link rel="stylesheet" href="css/components/main-button.css">
     <link rel="stylesheet" href="css/components/section.css">
     <link rel="stylesheet" href="css/components/tec-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
@@ -31,7 +31,7 @@
             <a class="main-action" href="#skill">Skill</a>
             <a class="main-action" href="#projetos">Projetos</a>
             <a class="main-action" href="#contatos">Contatos</a>
-            <a class="button" href="" lang="en">Download CV</a>
+            <a class="main-button" href="" lang="en">Download CV</a>
         </nav>
     </header>
     <section class="main-banner">
@@ -42,8 +42,8 @@
                 <h2 class="subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
-                <a class="button" href="" lang="en">Download CV</a>
-                <a class="button" href="">Contatos</a>
+                <a class="main-button" href="" lang="en">Download CV</a>
+                <a class="main-button" href="">Contatos</a>
             </div>
         </div>
     </section>
