refactor: "Change header for main-header"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/components/header.css">
+    <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/main-title.css">
     <link rel="stylesheet" href="css/components/subtitle.css">
@@ -24,7 +24,7 @@
     
 </head>
 <body>
-    <header class="header">
+    <header class="main-header">
         <h1>BP</h1>
         <nav>
             <a class="main-action" href="#sobre" lang="en">Sobre</a>
