refactor: "Change subtitle for main-subtitle"

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="css/components/main-header.css">
     <link rel="stylesheet" href="css/components/main-banner.css">
     <link rel="stylesheet" href="css/components/main-title.css">
-    <link rel="stylesheet" href="css/components/subtitle.css">
+    <link rel="stylesheet" href="css/components/main-subtitle.css">
     <link rel="stylesheet" href="css/components/main-box.css">
     <link rel="stylesheet" href="css/components/main-action.css">
     <link rel="stylesheet" href="css/components/main-button.css">
-    <link rel="stylesheet" href="css/components/section.css">
+    <link rel="stylesheet" href="css/components/main-section.css">
     <link rel="stylesheet" href="css/components/tec-skill.css">
     <link rel="stylesheet" href="css/components/progress-bar.css">
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
@@ -39,7 +39,7 @@
             <div class="main-box">
                 <h1 class="main-title">Bruno Pinheiro</h1>
                 
-                <h2 class="subtitle">FrontEnd Developer</h2>
+                <h2 class="main-subtitle">FrontEnd Developer</h2>
             </div>
             <div class="navigation">
                 <a class="main-button" href="" lang="en">Download CV</a>
@@ -47,7 +47,7 @@
             </div>
         </div>
     </section>
-    <section class="section">
+    <section class="main-section">
         <h2 class="main-title -second">Skills</h2>
         <div class="wrapper-skill">
             <article class="tec-skill">
@@ -108,7 +108,7 @@
             </article>
         </div>
     </section>
-    <section class="section -bgBlack -bdFirst">
+    <section class="main-section -bgBlack -bdFirst">
         <h2 class="main-title -second">Projetos</h2>
         <div class="wrapper-card">
             <a href="https://github.com/brunop27/Angular_taskList" target="_blank">
