feat: "Create the main-description component"

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/components/wrapper-skill.css">
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
+    <link rel="stylesheet" href="css/components/main-description.css">
     
 </head>
 <body>
@@ -173,6 +174,11 @@
             </a>
         </div>
         
+    </section>
+    <section class="main-section -bgSecond -bdBlack">
+        <h2 class="main-title -second">Sobre</h2>
+        <p class="main-description">Estudante de programação web, hoje, trabalho como freelancer, colaborando com projetos terceiros e pessoais. Minhas fortes habilidades se compoem com FrontEnd(Angular, JavaScript) e backend(MySql, json-server)</p>
+
     </section>
 </body>
 </html>
