feat: Create the navigation button component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/components/card-project.css">
     <link rel="stylesheet" href="css/components/wrapper-card.css">
     <link rel="stylesheet" href="css/components/main-description.css">
+    <link rel="stylesheet" href="css/components/button-arrow.css">
     
 </head>
 <body>
@@ -177,8 +178,10 @@
     </section>
     <section class="main-section -bgSecond -bdBlack">
         <h2 class="main-title -second">Sobre</h2>
+        <button class="button-arrow -left"><span class="content">Voltar</span></button>
+        <button class="button-arrow -right"><span class="content">Avançar</span></button>
         <p class="main-description">Estudante de programação web, hoje, trabalho como freelancer, colaborando com projetos terceiros e pessoais. Minhas fortes habilidades se compoem com FrontEnd(Angular, JavaScript) e backend(MySql, json-server)</p>
-
+        
     </section>
 </body>
 </html>
