--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/components/main-description.css">
     <link rel="stylesheet" href="css/components/button-arrow.css">
     <link rel="stylesheet" href="css/components/node-card.css">
+    <link rel="stylesheet" href="css/components/main-carousel.css">
     
 </head>
 <body>
@@ -179,28 +180,41 @@
     </section>
     <section class="main-section -bgSecond -bdBlack">
         <h2 class="main-title -second">Sobre</h2>
-        <button class="button-arrow -left"><span class="content">Voltar</span></button>
-        <figure class="node-card">
-            <figcaption class="title">2023</figcaption>
-            <div class="logo">
-                <img src="" alt="Logo para experiências de 2023" class="logo">
-            </div>
-        </figure>
-        <figure class="node-card">
-            <figcaption class="title">2024</figcaption>
-            <div class="logo">
-                <img src="" alt="Logo para experiências de 2024" class="logo">
-            </div>
-        </figure>
-        <figure class="node-card">
-            <figcaption class="title">2024</figcaption>
-            <div class="logo">
-                <img src="" alt="Logo para experiências de 2024" class="logo">
-            </div>
-        </figure>
-
-        <button class="button-arrow -right"><span class="content">Avançar</span></button>
         <p class="main-description">Estudante de programação web, hoje, trabalho como freelancer, colaborando com projetos terceiros e pessoais. Minhas fortes habilidades se compoem com FrontEnd(Angular, JavaScript) e backend(MySql, json-server)</p>
+        <section class="main-carousel">
+            <button class="button-arrow -left"><span class="content">Voltar</span></button>
+            <figure class="node-card">
+                <figcaption class="title">2023</figcaption>
+                <div class="logo">
+                    <img src="" alt="2023" class="logo">
+                </div>
+            </figure>
+            <figure class="node-card">
+                <figcaption class="title">2024</figcaption>
+                <div class="logo">
+                    <img src="" alt="2024" class="logo">
+                </div>
+            </figure>
+            <figure class="node-card">
+                <figcaption class="title">2024</figcaption>
+                <div class="logo">
+                    <img src="" alt="2024" class="logo">
+                </div>
+            </figure>
+            <figure class="node-card">
+                <figcaption class="title">2024</figcaption>
+                <div class="logo">
+                    <img src="" alt="2024" class="logo">
+                </div>
+            </figure> 
+            <figure class="node-card">
+                <figcaption class="title">2024</figcaption>
+                <div class="logo">
+                    <img src="" alt="2024" class="logo">
+                </div>
+            </figure> 
+            <button class="button-arrow -right"><span class="content">Avançar</span></button>
+        </section>
     </section>
 </body>
 </html>
