feat: "Create the structure of animation to the carousel"

--- a/index.html
+++ b/index.html
@@ -183,36 +183,40 @@
         <p class="main-description">Estudante de programação web, hoje, trabalho como freelancer, colaborando com projetos terceiros e pessoais. Minhas fortes habilidades se compoem com FrontEnd(Angular, JavaScript) e backend(MySql, json-server)</p>
         <section class="main-carousel">
             <button class="button-arrow -left"><span class="content">Voltar</span></button>
-            <figure class="node-card">
-                <figcaption class="title">2023</figcaption>
-                <div class="logo">
-                    <img src="" alt="2023" class="logo">
-                </div>
-            </figure>
-            <figure class="node-card">
-                <figcaption class="title">2024</figcaption>
-                <div class="logo">
-                    <img src="" alt="2024" class="logo">
-                </div>
-            </figure>
-            <figure class="node-card">
-                <figcaption class="title">2024</figcaption>
-                <div class="logo">
-                    <img src="" alt="2024" class="logo">
-                </div>
-            </figure>
-            <figure class="node-card">
-                <figcaption class="title">2024</figcaption>
-                <div class="logo">
-                    <img src="" alt="2024" class="logo">
-                </div>
-            </figure> 
-            <figure class="node-card">
-                <figcaption class="title">2024</figcaption>
-                <div class="logo">
-                    <img src="" alt="2024" class="logo">
-                </div>
-            </figure> 
+            <div class="items">
+                <div class="elements">
+                    <figure class="node-card">
+                        <figcaption class="title">2023</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2023" class="logo">
+                        </div>
+                    </figure>
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
+                    </figure>
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
+                    </figure>
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
+                    </figure> 
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
+                    </figure> 
+                </div>                
+            </div>
             <button class="button-arrow -right"><span class="content">Avançar</span></button>
         </section>
     </section>
