feat:"Create the animation carousel"

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <link rel="stylesheet" href="css/components/main-description.css">
     <link rel="stylesheet" href="css/components/button-arrow.css">
     <link rel="stylesheet" href="css/components/node-card.css">
-    <link rel="stylesheet" href="css/components/main-carousel.css">
-    
+    <link rel="stylesheet" href="css/components/main-carousel.css">    
 </head>
 <body>
     <header class="main-header">
@@ -185,8 +184,8 @@
             <button class="button-arrow -left"><span class="content">Voltar</span></button>
             <div class="items">
                 <div class="elements">
-                    <figure class="node-card">
-                        <figcaption class="title">2023</figcaption>
+                    <figure class="node-card current-item">
+                        <figcaption class="title ">2023</figcaption>
                         <div class="logo">
                             <img src="" alt="2023" class="logo">
                         </div>
@@ -220,5 +219,6 @@
             <button class="button-arrow -right"><span class="content">Avançar</span></button>
         </section>
     </section>
+    <script src="js/components/main-carousel.js "></script>
 </body>
 </html>
