--- a/index.html
+++ b/index.html
@@ -213,7 +213,25 @@
                         <div class="logo">
                             <img src="" alt="2024" class="logo">
                         </div>
+                    </figure>
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
+                    </figure>
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
                     </figure> 
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
+                        <div class="logo">
+                            <img src="" alt="2024" class="logo">
+                        </div>
+                    </figure>
                 </div>                
             </div>
             <button class="button-arrow -right"><span class="content">Avançar</span></button>
