feat: "Create the footer component"

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/components/button-arrow.css">
     <link rel="stylesheet" href="css/components/node-card.css">
     <link rel="stylesheet" href="css/components/main-carousel.css">    
+    <link rel="stylesheet" href="css/components/main-footer.css">    
 </head>
 <body>
     <header class="main-header">
@@ -179,7 +180,6 @@
     </section>
     <section class="main-section -bgSecond -bdBlack">
         <h2 class="main-title -second">Sobre</h2>
-        <p class="main-description">Estudante de programação web, hoje, trabalho como freelancer, colaborando com projetos terceiros e pessoais. Minhas fortes habilidades se compoem com FrontEnd(Angular, JavaScript) e backend(MySql, json-server)</p>
         <section class="main-carousel">
             <button class="button-arrow -left"><span class="content">Voltar</span></button>
             <div class="items">
@@ -236,7 +236,19 @@
             </div>
             <button class="button-arrow -right"><span class="content">Avançar</span></button>
         </section>
+        <p class="main-description">Estudante de programação web, hoje, trabalho como freelancer, colaborando com projetos terceiros e pessoais. Minhas fortes habilidades se compoem com FrontEnd(Angular, JavaScript) e backend(MySql, json-server)</p>
     </section>
+    <footer class="main-footer">
+        <a class="action" href="https://github.com/brunop27">
+            <img src="img/icon_gitHub.png" alt="Icone do GitHub">
+        </a>
+        <a class="action" href="https://www.instagram.com/brunop_o27/">
+            <img src="img/icon_insta.png" alt="Icone do Instagran">
+        </a>
+        <a class="action" href="https://www.linkedin.com/in/bruno-pinheiro-8aa81a9b/">
+            <img src="img/icon_Linkedin.jfif" alt="Icone do Linkedin">
+        </a>
+    </footer>
     <script src="js/components/main-carousel.js "></script>
 </body>
 </html>
