refactor: "Remove unnecessary information"

--- a/index.html
+++ b/index.html
@@ -190,52 +190,34 @@
             <button class="button-arrow -left"><span class="content">Voltar</span></button>
             <div class="items">
                 <div class="elements">
-                    <figure class="node-card current-item">
-                        <figcaption class="title ">2023</figcaption>
+                    <figure class="node-card">
+                        <figcaption class="title">2024</figcaption>
                         <div class="logo">
-                            <img src="" alt="2023" class="logo">
+                            <img src="" alt="Progress" class="logo">
                         </div>
                     </figure>
                     <figure class="node-card">
                         <figcaption class="title">2024</figcaption>
                         <div class="logo">
-                            <img src="" alt="2024" class="logo">
+                            <img src="" alt="Progress" class="logo">
                         </div>
                     </figure>
                     <figure class="node-card">
                         <figcaption class="title">2024</figcaption>
                         <div class="logo">
-                            <img src="" alt="2024" class="logo">
-                        </div>
-                    </figure>
-                    <figure class="node-card">
-                        <figcaption class="title">2024</figcaption>
-                        <div class="logo">
-                            <img src="" alt="2024" class="logo">
+                            <img src="" alt="Progress" class="logo">
                         </div>
                     </figure> 
                     <figure class="node-card">
                         <figcaption class="title">2024</figcaption>
                         <div class="logo">
-                            <img src="" alt="2024" class="logo">
+                            <img src="" alt="Progress" class="logo">
                         </div>
                     </figure>
                     <figure class="node-card">
                         <figcaption class="title">2024</figcaption>
                         <div class="logo">
-                            <img src="" alt="2024" class="logo">
-                        </div>
-                    </figure>
-                    <figure class="node-card">
-                        <figcaption class="title">2024</figcaption>
-                        <div class="logo">
-                            <img src="" alt="2024" class="logo">
-                        </div>
-                    </figure> 
-                    <figure class="node-card">
-                        <figcaption class="title">2024</figcaption>
-                        <div class="logo">
-                            <img src="" alt="2024" class="logo">
+                            <img src="" alt="Progress" class="logo">
                         </div>
                     </figure>
                 </div>                
